fix logo spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,6 +360,8 @@ p {
 }
 .header-area .navbar .navbar-brand {
   padding-bottom: 10px;
+  max-width: 70%;
+  min-width: 200px;
 }
 .header-area .navbar .navbar-brand img {
   max-width: 50%;
